# AI-Powered-Personal-Expense-Intelligence-System

./: .gitignore  README.md  deploy.bat  deploy.sh  docker-compose.yml  package-lock.json
backend/: .env.example  Dockerfile  ai_engine.py  auth.py  category_ai.py  crud.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  run.py  schemas.py  tests_auth.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  ai_routes.py  budget_routes.py  insights_routes.py  transaction_routes.py
backend/app/core/: auth.py  config.py  logging.py
backend/app/database/: __init__.py
backend/app/models/: models.py
backend/app/schemas/: __init__.py
backend/app/services/: ai_service.py  budget_service.py  insights_service.py  transaction_service.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
